--- a/client/components/header/header.scss
+++ b/client/components/header/header.scss
@@ -32,7 +32,7 @@
 
 .header-logo {
   display: block;
-  width: 204px;
+  width: 100%;
   img {
     max-width: 100%;
     margin-top: -5px;
